--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,14 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.42'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
+    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.42'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
